--- a/test3/application/templates/chat.html
+++ b/test3/application/templates/chat.html
@@ -7,20 +7,26 @@
 <br />
 
 <img src="{{url_for('static', filename='si.png')}}" align="middle" />
-<br /><br /><br />
-Lorem ipsum<br /><br /><br />
+<br /><br />
+<div class="small">
+{% for msg in msg_list %}
+{{ msg }}<br />
+{% endfor %} 
+</div>
+
+<br /><br />
 
 <div class="pad22">
 <form method="POST">
   <label for="fname">Nick:</label><br />
-  <input type="text" name="nick" value="anonymous"><br /><br />
+  <input type="text" name="nick" value="{{ form_nick }}"><br /><br />
   <label for="lname">Message:</label><br />
   <input type="text" name="msg" value=" "><br /><br /><br />
   <input type="submit" value="> Submit <">
 </form> 
 </div>
 
-<br /><br /><br />
+<br /><br />
 <img src="{{url_for('static', filename='bg_cyber.png')}}" width="638"/>
 <br />
 
