--- a/test3/application/templates/links.html
+++ b/test3/application/templates/links.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="menu"><a href="./">home</a> | <a href="./test">test</a> | <a href="./page3">page3</a> | <a href="./chat">chat</a> | links </div>
+<div class="menu"><a href="./">home</a> | <a href="./test">test</a> | <a href="./auth">auth</a> | <a href="./chat">chat</a> | links </div>
 <br />
 <h2>links.onion</h2>
 
