--- a/test3/application/templates/auth.html
+++ b/test3/application/templates/auth.html
@@ -26,5 +26,9 @@ for some other functions we prepare the input only after entering the necessary 
 Quis aute iure reprehenderit in voluptate velit esse cillum dolore 
 eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, 
 sunt in culpa qui officia deserunt mollit anim id est laborum.
+<div class="cent pad22">
+
+<img src="{{ qrcode("agama3test", error_correction='H', back_color='111', fill_color='#4CAF50') }}">
+</div>
 
 {% endblock %}
